--- a/Common/game.css
+++ b/Common/game.css
@@ -1,11 +1,15 @@
+body{
+    background-color: #4ca1af;
+    background-image: linear-gradient(to right,#c4e0e5 , #4ca1af); 
+}
+
 .container{
    height: 90vh;
    display: flex;
-   align-content: center;
+   align-items: center;
    justify-content: center;
 }
 
 #gameScreen{
-    /* border: 3px solid lime; */
     background-color: black;
 }
